--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,7 @@ enumn = "0.1.3"
 memoffset = "0.6.5"
 strum_macros = "0.24.0"
 time = { version = "0.3.9", features = ["large-dates", "macros"], default-features = false, optional = true }
+afl = "0.12.10"
 
 [dev-dependencies]
 anyhow = "1.0"
@@ -40,3 +41,6 @@ required-features = ["time"]
 [package.metadata.docs.rs]
 all-features = true
 rustdoc-args = ["--cfg", "docsrs"]
+
+[[bin]]
+name = "ntfs"
